--- a/realestatefrontend/src/Component/Footer/Footer.css
+++ b/realestatefrontend/src/Component/Footer/Footer.css
@@ -1,3 +1,19 @@
+/* Footer.css */
+/* 
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+ */
+
+
+
+
 .footer {
     background-color: #333;
     color: white;
