--- a/realestatefrontend/src/Component/SignUp/SignUp.css
+++ b/realestatefrontend/src/Component/SignUp/SignUp.css
@@ -45,3 +45,18 @@
     background-color: #0056b3;
   }
   
+
+  button[type="submit"] {
+    background-color: #007bff; /* Blue color */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+  
+  /* Add a hover effect */
+  button[type="submit"]:hover {
+    background-color: #0056b3; /* Darker blue on hover */
+  }
