updated frontend and backend

--- a/realestatefrontend/src/Component/Admin/AdminPage.css
+++ b/realestatefrontend/src/Component/Admin/AdminPage.css
@@ -30,7 +30,7 @@
     margin: 10px 0;
   }
   
-  button {
+ .property-button {
     background-color: #ff0000;
     color: #fff;
     border: none;
