--- a/realestatefrontend/src/Component/Home/Home.css
+++ b/realestatefrontend/src/Component/Home/Home.css
@@ -4,108 +4,105 @@
   background-color: #f4f4f4;
   padding: 100px 0;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 .home-content {
-  max-width: 800px;
-  margin: 0 auto;
+  
+  text-align: center;
 }
 
 .home h1 {
   font-size: 36px;
   margin-bottom: 10px;
-}
+} 
 
 .home p {
   font-size: 18px;
   color: #666;
-}
+} 
 
 .search-form {
-  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
-.search-form input,
-.search-form select,
-.search-form button {
-  margin-right: 10px;
+.search-form input{
   padding: 10px;
-  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 10px;
 }
+
+
+.search-form select 
+{ padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 10px;
+}
+
+
+
+
+
+
+
+
+
+.bangalore-button {
+  background-color: #fff;
+
+}
+
+
 
 .city-list {
-  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-.city-list h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
+.city-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  margin: 5px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  cursor: pointer;
+
 }
 
-.city-list ul {
-  list-style: none;
-  padding: 0;
-}
 
-.city-list li {
-  display: inline-block;
+
+.city-list button {
+  display: flex;
+  align-items: center;
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
   margin: 5px;
   cursor: pointer;
-  padding: 5px 10px;
-  background-color: #ddd;
-  border-radius: 5px;
   transition: background-color 0.3s;
 }
 
-.city-list li:hover {
-  background-color: #aaa;
-  color: #fff;
+.city-list img {
+  width: 200px;
+  height: 200px; 
+  margin-right: 10px; 
+  display: grid;
 }
 
-.property-list {
-  margin-top: 30px;
+.city-list button:hover {
+  background-color: black; /* Change this to your desired hover color */
 }
 
-.property-list h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.property-list ul {
-  list-style: none;
-  padding: 0;
-}
-
-.property-list li {
-  margin-bottom: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #fff;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-
-
-
-/* .home {
-    background-color: #f4f4f4;
-    padding: 100px 0;
-    text-align: center;
-  }
-  
-  .home-content {
-    max-width: 800px;
-    margin: 0 auto;
-  }
-  
-  .home h1 {
-    font-size: 36px;
-    margin-bottom: 10px;
-  }
-  
-  .home p {
-    font-size: 18px;
-    color: #666;
-  }
-   */
